[metadata]
name = sidebrain
version = 0.0.1
author = Paolo Rechia
author_email = paolorechia+sidebrain@gmail.com
description = A 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paolorechia/side-brain
project_urls =
    Bug Tracker = https://github.com/paolorechia/side-brain
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
; install_requires = 
    ; pydantic==1.8.2

[options.packages.find]
where = src

[flake8]
max-line-length = 100